--- a/server/public/stylesheets/weeklyplans-create-plan.css
+++ b/server/public/stylesheets/weeklyplans-create-plan.css
@@ -42,12 +42,20 @@
 }
 
 .create-weekly-plans-es-os-and-benchmarks-window {
-    padding-left: 1rem;
+    /*padding-left: 1rem;*/
+}
+
+.create-weekly-plans-subsection-header {
+    font-weight: bold;
+    font-size: 1.2rem;
+    margin-bottom: 0;
 }
 
 .create-weekly-plans-subsection {
-    font-weight: bold;
-    font-size: 1.2rem;
+    margin-bottom: 0.5rem;
+    padding: 0.7rem;
+    border: 1px solid lightgrey;
+    background-color: #f6f6f6;
 }
 
 .create-weekly-plans-es-and-os-code {
@@ -55,19 +63,33 @@
 }
 
 .create-weekly-plans-es-and-os-line {
-    margin-top: 0.3rem;
-    margin-bottom: 0.3rem;
+    margin-top: 0.1rem;
+    margin-bottom: 0.1rem;
+}
+.create-weekly-plans-es-and-os-sentence {
+    margin-top: 0.1rem;
+    margin-bottom: 0.1rem;
 }
 
+
 .create-weekly-plans-es-and-os-section {
-    margin-bottom: 1.2rem;
+    margin-bottom: 1.7rem;
+    font-size: 0.9rem;
 }
+.create-weekly-plans-benchmarks-section {
+    margin-bottom: 1.7rem;
+    font-size: 0.9rem;
+}
+
+.create-weekly-plans-es-and-os-section-header {
+    margin-top: 1.2rem;
+    margin-bottom: 0.3rem;
+    font-weight: bold;
+}
+
 .create-weekly-plans-benchmark-line {
     margin-top: 0.3rem;
     margin-bottom: 0.3rem;
-}
-.create-weekly-plans-benchmarks-section {
-    margin-bottom: 1.2rem;
 }
 
 #create-weekly-plans-outer-tab {
