--- a/server/app/views/planning/weekly/_templateWeeklyPlanning.scala.html
+++ b/server/app/views/planning/weekly/_templateWeeklyPlanning.scala.html
@@ -39,14 +39,14 @@
                         <li class="nav-item">
                             <a role="button" class="btn btn-warning btn-sm btn-block class-level-button"
                             href="@controllers.planning.weekly.routes.WeeklyPlanningController.createPlanForTheWeek(classDetails.id.id)">
-                                Plan for the Week
+                                Plan Week
                             </a>
                         </li>
                     } else {
                         <li class="nav-item">
                             <a class="btn btn-light text-dark btn-sm btn-block class-level-button" role="button"
                             href="@controllers.planning.weekly.routes.WeeklyPlanningController.createPlanForTheWeek(classDetails.id.id)">
-                                Plan for the Week
+                                Plan Week
                             </a>
                         </li>
                     }
@@ -61,7 +61,7 @@
                     <li class="nav-item">
                         <a class="btn btn-light text-dark btn-sm btn-block class-level-button" role="button"
                         href="#">
-                            Plan for the Week
+                            Plan Week
                         </a>
                     </li>
                 }
