--- a/server/public/stylesheets/weeklyplans-create-plan.css
+++ b/server/public/stylesheets/weeklyplans-create-plan.css
@@ -62,6 +62,10 @@
     font-weight: bold;
 }
 
+.create-weekly-plans-es-and-os-row {
+    margin-top: 0.2rem;
+    margin-bottom: 0.2rem;
+}
 .create-weekly-plans-es-and-os-line {
     margin-top: 0.1rem;
     margin-bottom: 0.1rem;
@@ -87,9 +91,13 @@
     font-weight: bold;
 }
 
+.create-weekly-plans-benchmark-row {
+    margin-top: 0.2rem;
+    margin-bottom: 0.2rem;
+}
 .create-weekly-plans-benchmark-line {
-    margin-top: 0.3rem;
-    margin-bottom: 0.3rem;
+    margin-top: 0.1rem;
+    margin-bottom: 0.1rem;
 }
 
 #create-weekly-plans-outer-tab {
