--- a/server/public/stylesheets/weeklyplans-create-plan.css
+++ b/server/public/stylesheets/weeklyplans-create-plan.css
@@ -108,3 +108,8 @@
     border-bottom: 1px solid lightgrey;
 
 }
+
+.create-weekly-plans-plan-lessons-button {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+}
