--- a/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
+++ b/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
@@ -380,13 +380,18 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Plan <span id="create-weekly-plans-lesson-subject-name"></span> Lesson(s)</h5>
+                    <h5 class="modal-title text-center">Plan <span id="create-weekly-plans-lesson-subject-name"></span> Lesson(s)</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
                     <p>Modal body text goes here.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aspernatur,
+                        culpa dicta enim esse est fugiat id illo illum incidunt iusto laudantium libero mollitia non,
+                        odio temporibus voluptatum. Aspernatur, reprehenderit. Lorem ipsum dolor sit amet, consectetur
+                        adipisicing elit. Delectus dolorem ducimus error explicabo ipsa, modi nobis pariatur? Aperiam
+                            cum deleniti eaque, earum facilis omnis perspiciatis quidem, quisquam ratione rerum sunt.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary">Save changes</button>
