--- a/server/public/stylesheets/weeklyplans-create-plan.css
+++ b/server/public/stylesheets/weeklyplans-create-plan.css
@@ -113,3 +113,16 @@
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
 }
+
+#create-weekly-plans-lesson-modal .modal-dialog {
+    max-width: 100%;
+    max-height: 100%;
+    width: 90%;
+    height: 90%;
+}
+
+/*#create-weekly-plans-lesson-modal .modal-content {*/
+    /*height: auto;*/
+    /*min-height: 90%;*/
+    /*border-radius: 0;*/
+/*}*/
