--- a/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
+++ b/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
@@ -3,6 +3,7 @@
 @import models.timetoteach.planning.ScottishCurriculumPlanningAreaWrapper
 @import models.timetoteach.planning.pdf.CurriculumAreaTermlyPlanForPdfWrapper
 @import models.timetoteach.ui._
+@import io.sudostream.timetoteach.messages.systemwide.model.classtimetable.ClassTimetable
 
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler,
         userPictureUri: Option[String],
@@ -10,7 +11,8 @@
         userFamilyName: Option[String],
         classDetails: ClassDetails,
         currentTermlyPlan: CurriculumAreaTermlyPlanForPdfWrapper,
-        esAndOsCodeToDetailMap: Map[String, duplicate.model.esandos.EandO]
+        esAndOsCodeToDetailMap: Map[String, duplicate.model.esandos.EandO],
+        classTimetable: ClassTimetable
 )
 
 @tabContentActiveOrNot(index: Int) = {
@@ -117,7 +119,8 @@
 
         <div class="d-flex justify-content-center">
             <button class="btn btn-success create-weekly-plans-plan-lessons-button"
-            data-planning-area="@plan.planningArea.toString" >
+            data-planning-area="@plan.planningArea.toString"
+            data-planning-area-nice="@ScottishCurriculumPlanningAreaWrapper(plan.planningArea).niceSubjectLevelValue()" >
                 Plan
                 <strong>@{
                     ScottishCurriculumPlanningAreaWrapper(plan.planningArea).niceSubjectLevelValue()
@@ -380,18 +383,53 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title text-center">Plan <span id="create-weekly-plans-lesson-subject-name"></span> Lesson(s)</h5>
+                    <h5 class="modal-title">Plan <span id="create-weekly-plans-lesson-subject-name"></span> Lesson(s)</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p>Modal body text goes here.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aspernatur,
-                        culpa dicta enim esse est fugiat id illo illum incidunt iusto laudantium libero mollitia non,
-                        odio temporibus voluptatum. Aspernatur, reprehenderit. Lorem ipsum dolor sit amet, consectetur
-                        adipisicing elit. Delectus dolorem ducimus error explicabo ipsa, modi nobis pariatur? Aperiam
-                            cum deleniti eaque, earum facilis omnis perspiciatis quidem, quisquam ratione rerum sunt.</p>
+                    <p>
+
+                    </p>
+                    <p>Lesson text goes here.</p>
+
+                    <div class="row">
+                        <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
+                            Add Activity
+                        </button>
+                    </div>
+                    <div class="row">
+                        <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
+                            Add Resource
+                        </button>
+                    </div>
+                    <div class="row">
+                        <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
+                            Add Learning Intention
+                        </button>
+                    </div>
+                    <div class="row">
+                        <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
+                            Add Success Criteria
+                        </button>
+                    </div>
+                    <div class="row">
+                        <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
+                            Add Plenary
+                        </button>
+                    </div>
+                    <div class="row">
+                        <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
+                            Add Formative Assessment
+                        </button>
+                    </div>
+                    <div class="row">
+                        <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
+                            Add Note
+                        </button>
+                    </div>
+
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary">Save changes</button>
