--- a/server/public/stylesheets/weeklyplans-create-plan.css
+++ b/server/public/stylesheets/weeklyplans-create-plan.css
@@ -126,3 +126,8 @@
     /*min-height: 90%;*/
     /*border-radius: 0;*/
 /*}*/
+
+.create-weekly-plans-add-to-lesson-button {
+    margin-top: 1rem;
+    margin-left: 2rem;
+}
