--- a/server/app/views/askInitialPreferences.scala.html
+++ b/server/app/views/askInitialPreferences.scala.html
@@ -2,7 +2,7 @@
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUser: io.sudostream.timetoteach.messages.systemwide.model.User, postInitialPreferencesUrl: Call)(implicit request: AuthenticatedRequest[Any])
 
 @timetoteachAppMain(handler, "Setup Questions",
-    userPictureUri, userFirstName, userFamilyName, None, None, None, None){
+    userPictureUri, userFirstName, userFamilyName, None, None, None, None, None){
     <li></li> }{
     <li></li> }{
 
