--- a/server/app/views/planning/classtimetables/classtimetable.scala.html
+++ b/server/app/views/planning/classtimetables/classtimetable.scala.html
@@ -3,10 +3,11 @@
 @import models.timetoteach.classtimetable.SchoolDayTimes
 @import shared.model.classtimetable.{WWWClassTimetable, _}
 @import models.timetoteach.ui.CLASS_TIMETABLE
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], schoolDayTimes: SchoolDayTimes, savedWwwClassTimetable: Option[WWWClassTimetable], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails)(implicit request: AuthenticatedRequest[Any])
+@import models.timetoteach.term.SchoolTerm
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], schoolDayTimes: SchoolDayTimes, savedWwwClassTimetable: Option[WWWClassTimetable], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails,  currentTerm: SchoolTerm)(implicit request: AuthenticatedRequest[Any])
 
 @timetoteachAppMain(handler, s"Class ${classDetails.className.name}",
-    userPictureUri, userFirstName, userFamilyName, Some(classDetails.id.id), Some(CLASS_TIMETABLE), None, None) {
+    userPictureUri, userFirstName, userFamilyName, Some(classDetails), Some(CLASS_TIMETABLE), None, None, Some(currentTerm)) {
 
     <div class="in-app-menu-small-devices">
         <li class="nav-item nav-login-button">
